# cpp-project-template

./: .clang-format  .gitignore  README.md  pyproject.toml
